--- a/Evaluation of Aerodynamic Coefficients for an Aircraft Model/lab7.ipynb
+++ b/Evaluation of Aerodynamic Coefficients for an Aircraft Model/lab7.ipynb
@@ -274,7 +274,6 @@
     "    C_m= M[1,:]/q/Planform_area/Chord_Length\r\n",
     "    C_n= M[2,:]/q/Planform_area/Span\r\n",
     "    C_M = np.array([C_l,C_m,C_n]).reshape((3,27))\r\n",
-    "    print(f\"{C_F[:,17]}\\n{C_M[:,17]}\")\r\n",
     "    return C_F,C_M"
    ],
    "outputs": [],
@@ -707,18 +706,7 @@
     "F_w,M_w = Wind_Axis_force_and_moments_about_reference(FB = F_B,MB = M_B,AoA = np.array(WindData_15mps['AoA (degree)']))\r\n",
     "C_Fw,C_Mw = Coeff_force_and_moments(F=F_w,M= M_w,q= np.array(WindData_15mps['Dynamic Pressure(N/m2)']))\r\n"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[ 0.04261133  0.00065855 -0.60014493]\n",
-      "[ 0.00709333 -0.34866241 -0.00042499]\n",
-      "[0.07297448 0.00065855 0.59721386]\n",
-      "[ 0.00688106 -0.34866241 -0.001774  ]\n"
-     ]
-    }
-   ],
+   
    "metadata": {}
   },
   {
@@ -1238,7 +1226,7 @@
     "plt.figure(figsize=(20,15));\r\n",
     "plt.subplot(331);\r\n",
     "plt.plot(aoa30, C_FB30[0])\r\n",
-    "plt.plot(aoa30, C_Fw30[0]);plt.grid();plt.xlabel('AoA (degree)');plt.ylabel('Cd');plt.legend(['Body axis','Wing axis']);\r\n",
+    "plt.plot(aoa30, C_Fw30[0]);plt.grid();plt.xlabel('AoA (degree)');plt.ylabel('Cd');plt.legend(['Body axis','Wind axis']);\r\n",
     "plt.subplot(332);\r\n",
     "plt.plot(aoa30, C_FB30[1])\r\n",
     "plt.plot(aoa30, C_Fw30[1]);plt.grid();plt.xlabel('AoA (degree)');plt.ylabel('Cs');\r\n",
